
2017-11-14  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c: removed artificial limit for -fmax-errors
	* cobc.c: FR #255 new command line option `-O0` (short-opt: '0') for
	  disabling optimizations (new define CB_COPT_0),
	  postpone addition for -O option group to cflags
	* tree.c (cb_int, cb_build_label): set source position for integers
	  and labels on tree creation
	* parser.y: removed position setting for integers and labels
	* parser.y (backup_current_pos, set_pos_from_backup): new functions for
	  position corrections (currently not used)
	* codegen.c (output_call), parser.y (call_body): fixing bug #462
	  don't generate static calls if ON EXCEPTION is given

2017-11-13  Ron Norman <rjn@inglenet.com>

	fixed Bug #461:
	* codegen.c: new function cb_init_codegen to clear local variables
	* cobc.c: call cb_init_codegen after releasing cob_parsemem_base or
	  cobc_mainmem_base

2017-11-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.h, tree.c, typeck.c: removed level_redundant_error and moved
	  the only part of it that was used once to typeck.c (validate_occurs)
	* typeck.c (validate_occurs): check level before raising a warning on
	  use of level 01/77 OCCURS, warn with correct position

2017-11-11  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c: increase size for DEBUG-CONTENT according to file record length

2017-11-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_call): change to exception handling: only check for
	  exceptions that are the result of the current CALL

2017-11-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* reserved.c, typeck.c: add DEBUG-ITEM to be handled as register
	* typeck.c: change definition of DEBUG-ITEM: DEBUG-LINE is alphanumeric,
	  DEBUG-NAME and DEBUG-CONTENT X(31) -> X(30)

2017-11-07  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c: change to USE FOR DEBUGGING procedures - don't generate a